--- a/client/package.json
+++ b/client/package.json
@@ -6,20 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --config=jest.config.js"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "14.1.0",
+    "three": "^0.158.0",
+    "socket.io-client": "^4.7.2",
+    "cannon-es": "^0.20.0",
+    "howler": "^2.2.4"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "@eslint/eslintrc": "^3"
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/three": "^0.158.0",
+    "@types/cannon": "^0.1.12",
+    "@types/howler": "^2.2.11",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "@eslint/eslintrc": "^3",
+    "jest": "^29.7.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/jest-dom": "^6.1.5",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "identity-obj-proxy": "^3.0.0"
   }
 }
