--- a/client/package.json
+++ b/client/package.json
@@ -10,30 +10,30 @@
     "test": "jest --config=jest.config.js"
   },
   "dependencies": {
+    "cannon-es": "^0.20.0",
+    "howler": "^2.2.4",
+    "next": "^15.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "14.1.0",
-    "three": "^0.158.0",
     "socket.io-client": "^4.7.2",
-    "cannon-es": "^0.20.0",
-    "howler": "^2.2.4"
+    "three": "^0.158.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@types/cannon": "^0.1.12",
+    "@types/howler": "^2.2.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/three": "^0.158.0",
-    "@types/cannon": "^0.1.12",
-    "@types/howler": "^2.2.11",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "@eslint/eslintrc": "^3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.1.5",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "identity-obj-proxy": "^3.0.0"
+    "typescript": "^5"
   }
 }
