Update Jest configuration to use jsdom environment, enhance Babel setup for modern JavaScript and TypeScript support, and refactor GameCanvas import path. Add new GameCanvas and HUD components with corresponding styles, and implement health management and race mechanics in the Car class. Introduce minimap functionality and performance settings management. Add comprehensive unit tests for car mechanics, controls, and HUD components.

--- a/client/package.json
+++ b/client/package.json
@@ -19,15 +19,21 @@
     "three": "^0.158.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@eslint/eslintrc": "^3",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/cannon": "^0.1.12",
     "@types/howler": "^2.2.11",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/three": "^0.158.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "identity-obj-proxy": "^3.0.0",
